AscendAgent: deploy, chat caching/compaction, RAG source attachments (#2)
* AscendAgent: containerize via Dockerfile and wire into docker-compose

Multi-stage Dockerfile (jdk-alpine builder -> jre-alpine runtime, non-root
app user, /actuator/health HEALTHCHECK, layer-cached deps), .dockerignore,
and a new ascend-agent compose service that starts by default. Container
parity comes from the existing application-docker.yaml Spring profile
activated by SPRING_PROFILES_ACTIVE=docker; the compose environment block
carries only provider API keys sourced from a developer-local .env.

Fixes latent bugs in application-docker.yaml that would have broken
container mode at runtime: wrong unstructured host:port, wrong Postgres
host, plus missing MCP and LM Studio host.docker.internal overrides.

Also reconciles the openspec change proposal/design/tasks/specs with the
shipped approach (no fullstack profile; profile-based parity instead of
strict env passthrough; application-docker.yaml fixes captured as 3b).

* AscendAgent: independent toggles for Redis and Postgres chat-history backends

New @ConfigurationProperties class ChatHistoryProperties at prefix
app.memory.chat-history binds maxSize, ttl, redis.enabled (default true),
postgres.enabled (default true). PersistentChatMemory drops the two @Value
fields, takes the bean by constructor, and gates each backend's read and
write paths independently. With both flags off, get() returns an empty
list and add() is a no-op; clear() always attempts the Redis delete to
stay safe under runtime flag flips. A @PostConstruct log line and a new
Chat History: Redis [..], Postgres [..] entry in the StartupLogConfig
banner make the configuration visible at boot.

Tests: PropertiesTest gains a defaults/setters row for the new class;
PersistentChatMemoryExtraTest gains two @ParameterizedTest matrices over
all four flag combinations (get + add) plus a clear() test. The existing
ReflectionTestUtils.setField wiring on the removed @Value fields was
mig