@@ -1,8 +1,9 @@
 package com.lukk.ascend.ai.agent.integration;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.lukk.ascend.ai.agent.service.VectorStoreResolver;
+import com.lukk.ascend.ai.agent.service.provider.VectorStoreResolver;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentMatchers;
@@ -41,7 +42,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 /**
  * End-to-end integration test for the ingestion pipeline. Drives multipart uploads through
  * the real {@code IngestionController} into MinIO and runs the manual ingestion through
- * {@link com.lukk.ascend.ai.agent.service.ManualIngestionService} against a real Postgres
+ * {@link com.lukk.ascend.ai.agent.service.ingestion.ManualIngestionService} against a real Postgres
  * (for the {@code INT_METADATA_STORE}) while stubbing the embedding/vector store layer
  * because LM Studio / OpenAI are unreachable in CI.
  *
@@ -121,7 +122,8 @@ class IngestionEndToEndIT extends TestcontainersBase {
                 .andReturn();
 
         JsonNode body = objectMapper.readTree(result.getResponse().getContentAsString());
-        List<String> keys = objectMapper.convertValue(body.get("uploaded"), List.class);
+        List<String> keys = objectMapper.convertValue(body.get("uploaded"), new TypeReference<List<String>>() {
+        });
 
         assertThat(keys).contains("markdown/notes.md", "documents/report.pdf");
         // DOCX-by-extension is rejected if Tika sniffs the synthesized bytes as plain zip,
@@ -171,10 +173,11 @@ class IngestionEndToEndIT extends TestcontainersBase {
                 .andReturn();
 
         JsonNode body = objectMapper.readTree(result.getResponse().getContentAsString());
-        List<String> keys = objectMapper.convertValue(body.get("uploaded"), List.class);
+        List<String> keys = objectMapper.convertValue(body.get("uploaded"), new TypeReference<List<String>>() {
+        });
 
         assertThat(keys).hasSize(1);
-        String key = keys.get(0);
+        String key = keys.getFirst();
 
         // IngestionSecurity strips path segments and dot-runs; the resulting key must NOT
         // contain ".." anywhere and must NOT have a leading slash on the filename portion.
@@ -193,7 +196,7 @@ class IngestionEndToEndIT extends TestcontainersBase {
 
     @Test
     void runIngestion_processesUploadedMarkdown_andPersistsMetadataAndCallsVectorStore() throws Exception {
-        // Upload a single markdown file — the run pipeline should ingest it.
+        // Upload a single Markdown file — the run pipeline should ingest it.
         MockMultipartFile mdFile = new MockMultipartFile(
                 "file", "run-target.md", "text/markdown",
                 ("# Heading\n\n" + "Body content. ".repeat(50)).getBytes());
@@ -238,7 +241,7 @@ class IngestionEndToEndIT extends TestcontainersBase {
                 "SELECT COUNT(*) FROM INT_METADATA_STORE WHERE METADATA_KEY LIKE 'manual-ingestion:%'",
                 Integer.class);
 
-        // Reset interactions on the mock so the second-run assertion is unambiguous —
+        // Reset interactions on the mock, so the second-run assertion is unambiguous —
         // we want to prove the second run did NOT call add() at all (the metadata store
         // dedupes everything).
         reset(mockVectorStore);
@@ -275,7 +278,7 @@ class IngestionEndToEndIT extends TestcontainersBase {
     }
 
     /**
-     * Smallest structurally-valid PDF-1.4 byte sequence Tika reliably sniffs as application/pdf.
+     * Smallest structurally valid PDF-1.4 byte sequence Tika reliably sniffs as application/pdf.
      */
     private static byte[] minimalPdfBytes() {
         String pdf = "%PDF-1.4\n"
