@@ -2,6 +2,7 @@ package com.lukk.ascend.ai.agent.service.ingestion.client;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.lukk.ascend.ai.agent.exception.IngestionException;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -38,14 +39,15 @@ class PaddleOcrClientTest {
     private PaddleOcrClient paddleOcrClient;
 
     @Test
+    @DisplayName("process extracts OCR text lines from a valid PaddleOCR JSON response")
     void process_WhenValidResponse_ThenExtractsLinesSuccessfully() {
         // given
         String jsonResponse = "{\"pages\": [{\"lines\": [{\"text\": \"Total: $100\"}, {\"text\": \"Tax: $5\"}]}]}";
-        
+
         RestClient.RequestBodyUriSpec postMock = mock(RestClient.RequestBodyUriSpec.class);
         RestClient.RequestBodySpec bodySpecMock = mock(RestClient.RequestBodySpec.class);
         RestClient.ResponseSpec responseSpecMock = mock(RestClient.ResponseSpec.class);
-        
+
         when(restClient.post()).thenReturn(postMock);
         when(postMock.uri(anyString())).thenReturn(bodySpecMock);
         when(bodySpecMock.contentType(MediaType.MULTIPART_FORM_DATA)).thenReturn(bodySpecMock);
@@ -58,41 +60,43 @@ class PaddleOcrClientTest {
 
         // then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getText())
+        assertThat(result.getFirst().getText())
                 .contains("Total: $100")
                 .contains("Tax: $5");
-        assertThat(result.get(0).getMetadata())
+        assertThat(result.getFirst().getMetadata())
                 .containsEntry("source", FILENAME)
                 .containsEntry("type", "paddleocr");
     }
 
     @Test
+    @DisplayName("process throws IngestionException when the REST client call fails")
     void process_WhenRestClientFails_ThenThrowsIngestionException() {
         // given
         RestClient.RequestBodyUriSpec postMock = mock(RestClient.RequestBodyUriSpec.class);
         RestClient.RequestBodySpec bodySpecMock = mock(RestClient.RequestBodySpec.class);
-        
+
         when(restClient.post()).thenReturn(postMock);
         when(postMock.uri(anyString())).thenReturn(bodySpecMock);
         when(bodySpecMock.contentType(MediaType.MULTIPART_FORM_DATA)).thenReturn(bodySpecMock);
         when(bodySpecMock.body(any(Object.class))).thenReturn(bodySpecMock);
         when(bodySpecMock.retrieve()).thenThrow(new RestClientException("Socket Timeout"));
 
-        // when / then
+        // then
         assertThatThrownBy(() -> paddleOcrClient.process(BYTES, FILENAME, null))
                 .isInstanceOf(IngestionException.class)
                 .hasMessageContaining("Failed to process document with PaddleOCR");
     }
 
     @Test
+    @DisplayName("process throws IngestionException when the API returns malformed JSON")
     void process_WhenInvalidJsonReturned_ThenThrowsIngestionException() {
         // given
         String invalidJson = "<xml>not json</xml>";
-        
+
         RestClient.RequestBodyUriSpec postMock = mock(RestClient.RequestBodyUriSpec.class);
         RestClient.RequestBodySpec bodySpecMock = mock(RestClient.RequestBodySpec.class);
         RestClient.ResponseSpec responseSpecMock = mock(RestClient.ResponseSpec.class);
-        
+
         when(restClient.post()).thenReturn(postMock);
         when(postMock.uri(anyString())).thenReturn(bodySpecMock);
         when(bodySpecMock.contentType(MediaType.MULTIPART_FORM_DATA)).thenReturn(bodySpecMock);
@@ -100,7 +104,7 @@ class PaddleOcrClientTest {
         when(bodySpecMock.retrieve()).thenReturn(responseSpecMock);
         when(responseSpecMock.body(String.class)).thenReturn(invalidJson);
 
-        // when / then
+        // then
         assertThatThrownBy(() -> paddleOcrClient.process(BYTES, FILENAME, "pl"))
                 .isInstanceOf(IngestionException.class)
                 .hasMessageContaining("Failed to parse PaddleOCR JSON response");
